# RGR4

./: .gitignore  CMakeLists.txt
include/: BrushWidthSpinBox.h  CanvasWidget.h  MainWindow.h  ToolBar.h
include/Shapes/: CircleShape.h  FreehandShape.h  LineShape.h  PolygonShape.h  RectangleShape.h  RegularPolygonShape.h  Shape.h
resources/: resources.qrc
src/: CanvasWidget.cpp  MainWindow.cpp  ToolBar.cpp  main.cpp
src/Shapes/: CircleShape.cpp  FreehandShape.cpp  LineShape.cpp  PolygonShape.cpp  RectangleShape.cpp  RegularPolygonShape.cpp
